# django_panels

./: .editorconfig  .hgignore  MANIFEST.in  Makefile  pyproject.toml  setup.py
panels/: __init__.py  api.py  apps.py  register.py  views.py
panels/locale/ca/LC_MESSAGES/: django.mo  django.po
panels/locale/es/LC_MESSAGES/: django.mo  django.po
panels/templates/panels/: panel.html  panels_dashboard.html
